<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nostorageperm">Es necesario conceder permisos sobre la memoria para hacer firmas locales</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="app_name">Cliente m\u00F3vil @firma</string>
    <string name="title_activity_cert_chooser">Importar certificado</string>
    <string name="title_activity_choose_sign_file">Seleccione el fichero a firmar</string>
    <string name="presentation_text">Bienvenido a "Cliente @firma Android".\nEsta aplicaci\u00F3n permite realizar firmas electrónicas en las p\u00E1ginas de los proveedores de servicios que lo soporten.\nPara funcionar correctamente debe tener un certificado electr\u00F3nico y su clave privada instalados en su dispositivo, consulte la documentaci\u00F3n de su sistema Android y con su proveedor de servicios de certificaci\u00F3n.</string>
    <string name="import_cert">Importar certificado</string>
    <string name="sign_file">Firmar fichero</string>
    <string name="request_cert">Solicitar certificado</string>
    <string name="appsDialogTitle">Listado de autoridades soportadas</string>
    <string name="appsDialogMessage">Seleccione la autoridad de certificaci\u00F3n a la que desee solicitar su certificado.</string>
    <string name="disclaimer">2018 Gobierno de Espa\u00F1a</string>
    <string name="privacy_policy">Pol\u00EDtica de privacidad</string>
    <string name="privacy_policy_url">https://administracion.gob.es/pag_Home/politicaDePrivacidad.html</string>
    <string name="content_desc">Logotipo @firma m\u00F3vil</string>
    <string name="ok">Aceptar</string>
    <string name="close">Cerrar</string>
    <string name="ca_not_found">No hay autoridades de certificaci\u00F3n configuradas.</string>
    <string name="title_activity_sign_data">Firma de datos</string>
    <string name="title_activity_select_certificate">Selecci\u00F3n de certificado</string>
    <string name="error_bad_params">No se ha realizado correctamente la invocaci\u00F3n de la aplicaci\u00F3n. Consulte a su proveedor de servicios.</string>
    <string name="error_server_connect">Ocurri\u00F3 un error en la conexi\u00F3n entre la aplicaci\u00F3n y la p\u00E1gina web.</string>
    <string name="error_server_error">No se ha podido devolver el resultado de firma a la p\u00E1gina web</string>
    <string name="file_chooser_directorio_actual">Directorio actual:</string>
    <string name="file_chooser_directorio">Directorio</string>
    <string name="file_chooser_directorio_padre">Directorio padre</string>
    <string name="file_chooser_tamano_del_fichero">Tama\u00F1o:</string>
    <string name="file_chooser_read_error">Error: No ha sido posible leer el fichero</string>
    <string name="bytes">bytes</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="error_loading_selected_file">Ocurri\u00F3 un error cargando el fichero \"%s\"</string>
    <string name="error_no_valid_p12">El fichero \"%s\" no es un PKCS#12 v\u00E1lido. Seleccione un nuevo almac\u00E9n para importar.</string>
    <string name="error">Error</string>
    <string name="title_activity_save_data">Guardar datos</string>
    <string name="saveData">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="error_saving_data">Ocurri\u00F3 un error al guardar los datos</string>
    <string name="error_saving_signature">Ocurri\u00F3 un error al guardar la firma</string>
    <string name="error_sending_data">No se pudo transmitir la firma de los datos al navegador web</string>
    <string name="error_signing">Error durante la operacion de firma</string>
    <string name="error_signing_no_key">No se pudo recuperar la clave del certificado de firma</string>
    <string name="error_signing_config">Error durante la configuraci\u00F3n de la firma electr\u00F3nica</string>
    <string name="error_loading_keystore">Error al cargar el almacen de claves</string>
    <string name="error_loading_certificate_alias">Error extrayendo los alias de los certificados del almac\u00E9n</string>
    <string name="error_no_device_to_store">No se ha encontrado un directorio para guardar la firma</string>
    <string name="error_no_certs">No se han encontrado certificados instalados en su dispositivo.</string>
    <string name="error_title_keystore_empty">Almac\u00E9n vac\u00EDo</string>
    <string name="error_dni_blocked_dlg">Lo sentimos, su DNI est\u00E1 bloquedado.</string>
    <string name="error_dni_blocked">Su DNI est\u00E1 bloquedado, deber\u00E1 acudir a los Puntos de Actualización de las Oficinas de Expedición para poder desbloquearlo. </string>
    <string name="error_title_dni_blocked">DNI bloquedado</string>
    <string name="error_pin_nulo">Error, el PIN del DNI es nulo.</string>    
    <string name="error_android_4_1">Android 4.1 y 4.1.1 no permiten que los nombres de certificados contengan caracteres especiales (espacios, guiones, etc.). Modifique el alias de sus certificados al importarlos para evitar este error.</string>
    <string name="data_saved">El fichero se ha guardado con el nombre %s</string>
    <string name="icon_ca">Icono de la autoridad de certificaci\u00F3n</string>
    <string name="dialog_msg_loading_data">Cargando datos</string>
    <string name="dialog_msg_loading_keystore">Cargando almac\u00E9n de claves</string>
    <string name="dialog_msg_signning">Firmando</string>
    <string name="dialog_pin">Para poder utilizar el certificado introduzca su c\u00F3digo de seguridad.\n</string>
    <string name="dialog_can">Para poder establecer conexi\u00F3n NFC introduzca su c\u00F3digo CAN.\n</string>
    <string name="dialog_title_select_cert">Seleccione un certificado</string>
    <string name="security_code">C\u00F3digo de seguridad</string>
	<string name="security_code_hint">C\u00F3digo de seguridad. </string>
	<string name="signedfile_title">Firma de fichero local</string>
	<string name="signedfile_error">Lo sentimos la firma no se ha podido realizar. Por favor, reint\u00E9ntelo de nuevo.</string>
	<string name="signedfile_correct">La firma se ha realizado correctamente.</string>
	<string name="signedfile_original_location">La firma "%1$s" se ha almacenado en el mismo directorio que el fichero firmado.</string>
	<string name="signedfile_downloads_location">La firma "%1$s" se ha almacenado en su directorio de descargas.</string>
	<string name="error_msc_pin">El PIN del dispositivo criptogr\u00E1fico es incorrecto. Tenga en cuenta que varios intentos fallidos consecutivos podr\u00EDan bloquearlo.</string>
	<string name="error_format_not_supported">Formato de firma no soportado.</string>
	<string name="dialog_alias_cert_text">%1$s\nV\u00E1lido: %2$s\nHasta: %3$s\nEmisor: %4$s</string>
	<string name="accesibility_icon_filetype">Icono del tipo de archivo</string>
	<string name="accesibility_icon_sign_ko">Error en la firma</string>
	<string name="accesibility_icon_sign_ok">Firma correcta</string>
	<string name="file_read_out_of_memory">El fichero seleccionado es demasiado grande y no hay memoria suficiente para completar la operaci\u00F3n de lectura</string>
    <string name="nfc_approach">Acerque su dispositivo al DNIe</string>
    <string name="nfc_instructions">Coloque el dispositivo sobre el DNIe y no lo mueva durante la operaci\u00F3n de firma</string>
    <string name="cancel_nfc">No usar DNIe</string>
    <string name="enable_nfc">Por favor, active el NFC para usar DNIe 3.0 y pulsa atr\u00E1s para volver</string>
    <string name="enable_nfc_question">Se ha detectado que su dispositivo dispone de NFC. \u00BFDesea habilitarlo para la firma con el DNIe 3.0 por NFC?</string>
    <string name="nfc_no_detected">No se ha habilitado NFC. Se usar\u00E1 el almac\u00E9n del sistema.</string>
    <string name="nfc_cancelled">Se ha cancelado el uso de NFC. Se usar\u00E1 el almac\u00E9n del sistema.</string>
    <string name="settings">Configuraci\u00F3n</string>
    <string name="can_not_can_be_null">El CAN no puede ser vac\u00EDo o nulo</string>
    <string name="unsupported_card">Tarjeta no soportada</string>
    <string name="nfc_card_initializing_error">Error al iniciar la conexi\u00F3n con la tarjeta. Int\u00E9ntelo de nuevo.</string>

</resources>