<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/vbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
			android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/logo_cliente" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.91"
        android:padding="10dp"
        android:text="@string/presentation_text"
        android:textColor="#000000" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClick"
        android:text="@string/sign_file"
        style="@style/ButtonRedSmall" />

    <Button
        android:id="@+id/importCertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:onClick="onClick"
        android:text="@string/import_cert"
        style="@style/ButtonRedSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/disclaimer" />

    <TextView
        android:id="@+id/privacyPolicyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:onClick="privacyPolicyLinkClick"
        android:text="@string/privacy_policy"
        style="@style/TextLink"
        />

</LinearLayout>